--- a/argocd/apps-argocd/hola-php.yaml
+++ b/argocd/apps-argocd/hola-php.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/tu-org/tu-repo.git'
+    repoURL: 'https://github.com/fpultera/lab-istio-helm.git'
     targetRevision: HEAD
     path: hola-mundo-helm
     helm:
