--- a/hola-mundo-helm/values.yaml
+++ b/hola-mundo-helm/values.yaml
@@ -16,14 +16,17 @@ serviceAccount:
   name: ""
 
 ingress:
-  enabled: false
-  annotations: {}
+  enabled: true
+  className: "nginx"
+  annotations:
+    kubernetes.io/ingress.class: nginx
   hosts:
-    - host: chart-example.local
+    - host: hola-php.local
       paths:
-        - /
+        - path: /
+          pathType: Prefix
   tls: []
-
+  
 autoscaling:
   enabled: false
   minReplicas: 1
