--- a/hola-apps-v2/values.yaml
+++ b/hola-apps-v2/values.yaml
@@ -13,6 +13,12 @@ serviceAccount:
   create: false
   name: ""
 
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+
 ingress:
   enabled: true
   className: "nginx"
